; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/nctgpio/extr_nctgpio.c_nct_gpio_pin_getcaps.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/nctgpio/extr_nctgpio.c_nct_gpio_pin_getcaps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nct_softc = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i64, i64*)* @nct_gpio_pin_getcaps to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nct_gpio_pin_getcaps(i32 %0, i64 %1, i64* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64*, align 8
  %8 = alloca %struct.nct_softc*, align 8
  store i32 %0, i32* %5, align 4
  store i64 %1, i64* %6, align 8
  store i64* %2, i64** %7, align 8
  %9 = load i64, i64* %6, align 8
  %10 = call i32 @NCT_IS_VALID_PIN(i64 %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %14, label %12

12:                                               ; preds = %3
  %13 = load i32, i32* @EINVAL, align 4
  store i32 %13, i32* %4, align 4
  br label %31

14:                                               ; preds = %3
  %15 = load i32, i32* %5, align 4
  %16 = call %struct.nct_softc* @device_get_softc(i32 %15)
  store %struct.nct_softc* %16, %struct.nct_softc** %8, align 8
  %17 = load %struct.nct_softc*, %struct.nct_softc** %8, align 8
  %18 = call i32 @GPIO_ASSERT_UNLOCKED(%struct.nct_softc* %17)
  %19 = load %struct.nct_softc*, %struct.nct_softc** %8, align 8
  %20 = call i32 @GPIO_LOCK(%struct.nct_softc* %19)
  %21 = load %struct.nct_softc*, %struct.nct_softc** %8, align 8
  %22 = getelementptr inbounds %struct.nct_softc, %struct.nct_softc* %21, i32 0, i32 0
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = load i64, i64* %6, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i64 %24
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load i64*, i64** %7, align 8
  store i64 %27, i64* %28, align 8
  %29 = load %struct.nct_softc*, %struct.nct_softc** %8, align 8
  %30 = call i32 @GPIO_UNLOCK(%struct.nct_softc* %29)
  store i32 0, i32* %4, align 4
  br label %31

31:                                               ; preds = %14, %12
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local i32 @NCT_IS_VALID_PIN(i64) #1

declare dso_local %struct.nct_softc* @device_get_softc(i32) #1

declare dso_local i32 @GPIO_ASSERT_UNLOCKED(%struct.nct_softc*) #1

declare dso_local i32 @GPIO_LOCK(%struct.nct_softc*) #1

declare dso_local i32 @GPIO_UNLOCK(%struct.nct_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
